# sms-forwarder-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/: base.py  smsforwarder_http_adapter.py  webhook_parser.py
app/api/: deps.py
app/api/v1/: auth.py  battery.py  calls.py  config.py  contacts.py  devices.py  frps.py  location.py  router.py  sms.py  tunnels.py  webhooks.py
app/cli/: create_admin.py
app/core/: config.py  exceptions.py  logger.py  security.py
app/db/: session.py
app/models/: audit_log.py  device.py  device_capability.py  device_command_log.py  device_event.py  device_tunnel.py  device_webhook.py  rate_limit.py  user.py  user_permission.py  webhook_nonce.py
app/schemas/: auth.py  battery.py  call.py  command.py  common.py  config.py  contact.py  device.py  frps.py  location.py  sms.py  tunnel.py  webhook.py
app/services/: audit_service.py  auth_service.py  command_service.py  device_service.py  frps_service.py  tunnel_service.py  webhook_service.py
app/utils/: crypto.py  deduplication.py  id_generator.py  masking.py  rate_limiter.py  responses.py
docker/: entrypoint.sh
docker/frp/: frps.toml.template
docker/nginx/: default.conf
docs/: device-ws-gateway-requirements.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
tests/: conftest.py  test_api_flow.py  test_frps_devices.py  test_masking.py  test_realtime_adapter.py  test_signature.py  test_tunnel_flow.py
(+20 files in other folders)
