[project]
name = "sms-forwarder-server"
version = "0.1.0"
description = "Webhook device gateway and SmsForwarder API bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
